--- a/16-May-2023/16-May-2023.md
+++ b/16-May-2023/16-May-2023.md
@@ -1,8 +1,10 @@
 ### May 16th Answer
 
-## 459200
+## 459200 lifeforms.
 
 We used a 2D list(matrix) data structure to represent the grid of lifeforms. Each element in the list represents a cell in the grid, and the state of the cell is denoted by either 'X' (lifeform) or '.' (empty space). This data structure allows for easy access and manipulation of the grid.
 The algorithm used in the code is simulation-based approach. It iteratively evolves the lifeforms based on the given rules by applying the rules simultaneously to all cells in each step. 
 
 Language used is Python.
+
+![Screenshot (64)](https://github.com/Charlo-tech/May-DSA-AH/assets/57678615/e94cc82f-b3c3-4b3b-9d72-ca143755eca1)
